--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,16 +97,28 @@ main {
   border-radius: 0.5rem;
 }
 
+.mc-box p {
+  margin: 0;
+  font-size: 1.05rem;
+  line-height: 1.6;
+  text-align: left;
+}
+
 .mc-box {
-  background-color: white;
-  color: black;
-  border-radius: 0.5rem;
-  padding: 2.5rem;
-  max-width: 32.5rem;
-  background-image: url('assets/img/cosa.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #f2f2f2;
+
+  border: 4px solid #bdbdbd;
+  border-right-color: #9e9e9e;
+  border-bottom-color: #9e9e9e;
+
+  box-shadow: 4px 4px 0 #6d6d6d;
+
+  padding: 1.5rem;
+  max-width: 520px;
+  width: 100%;
+
+  color: #111;
+  box-sizing: border-box;
 }
 
 .gallery {
@@ -122,17 +134,13 @@ main {
 
 .gallery img {
   width: 100%;
-  height: 12.5rem;
+  height: 15.5rem;
   object-fit: cover;
   border-radius: 0.375rem;
 }
 
-.mc-box p {
-  margin: 0;
-  font-size: 1.05rem;
-  line-height: 1.6;
-  text-align: left;
-}
+
+
 
 @media (max-width: 62rem) {
   .navbar-collapse {
@@ -167,4 +175,14 @@ main {
   .initial-section {
     background: url("../img/fondo_cel.webp") no-repeat center / cover;
   }
+
+  .character-img {
+    margin-top: 2rem;
+  }
+
+  .mc-box {
+  padding: 1.2rem;
+  font-size: 0.95rem;
+}
+
 }
